--- a/src/app/user-input/user-input.component.css
+++ b/src/app/user-input/user-input.component.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+h2{
+    margin: 0;
+}
 
-.input_wrapper{
-    max-width: 210px;
+.input_wrapper {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -8,42 +14,49 @@
     flex-direction: column;
     height: 100vh;
 }
-form{
+
+form {
     padding: 15px;
-    width: 200px;
-    height: 50px;
+    width: 360px;
+    height: 80px;
     border-radius: 1rem;
     background-color: rgba(205, 205, 205, 0.652);
     box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.3);
 
 }
-input{
+
+input {
     border: none;
     outline: none;
-    width: 98%;
+    font-size: 16px;
+    height: 30px;
+    width: 99%;
 }
-.passwordStrength{
+
+.passwordStrength {
     display: flex;
-    height: 5px;
+    height: 6px;
 }
-.passwordStrength div{
-    height: 4px;
-    width: 34%;
+
+.passwordStrength div {
+    height: 6px;
+    width: 33%;
     transition: background-color 0.3s ease-in-out;
 }
-.easy{
+
+.easy {
     background-color: red;
 }
-.medium{
+
+.medium {
     background-color: yellow;
 }
-.strong{
+
+.strong {
     background-color: rgb(0, 167, 0);
-    
-}
-.defaultPasswordStrengthColor{
-    background-color: gray;  
+
 }
 
-
-
+.defaultPasswordStrengthColor {
+    background-color: gray;
+}
