--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,16 +1,16 @@
 <div class="input_wrapper">
-    
 
-<form [formGroup]="passwordForm">
-    <label for="input">Password Strenght Checker</label>
-    <input type="password" formControlName="password" (input)="calculateStrenght()" >
-    
-    <!-- first approach -->
 
-    <div class="passwordStrength">
-        <div [class]="sectionOne"></div>
-        <div [class]="sectionTwo"></div>
-        <div [class]="sectionThree"></div>
-    </div>
-</form>
+    <form>
+        <h2>Password Strenght Checker</h2>
+        <input placeholder=" Type here..." #passwordInput formControlName="password" (input)="calculateStrenght()">
+
+        <!-- first approach -->
+
+        <div class="passwordStrength">
+            <div [class]="sectionOne"></div>
+            <div [class]="sectionTwo"></div>
+            <div [class]="sectionThree"></div>
+        </div>
+    </form>
 </div>
